# rag-eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  sample_ranked_b7c6163791d24cb082c6407163185b04.json
data/fixtures/app_prompts/: prompts.json
data/fixtures/csv/: amazon_uk_shoes_cleaned_1k.csv
data/fixtures/ner/: ad_ids_entities.json  credit_card_entities.json  entities_ad_ids.json  train_ad_ids.ner
output/: ner_ad_ids.json  qa_blog.json  qa_blogpost.json  qa_blogpost_sample.json  qa_readme.json  qa_sample.json  qa_textfile.json
qa_generator_outputs/: c0c07dbd-9517-4bbc-9119-a5de9de949b6.txt
src/: config.py  evaluation.py  file_processor.py  generator.py  llms.py  logger.py  main.py  models.py  prompts.py  ranking.py  responses.py  schema.py  service.py  simulation.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 026518f28917_remove_llmendpoint_from_qadata.py  047a87b16839_update_table_names_v7.py  060ae52f69d3_add_new_fields_in_llm_endpoint_v5.py  0b71254b4e02_add_new_fields_dataset.py  1d6bddfe2eff_remove_llmendpoint_from_qadata_v5.py  243cb163160b_new_migration.py  2baca84ef21e_add_new_fields_status_to_sims.py  2d466596de91_add_new_fields_in_llm_endpoint_v8_add_.py  2df3a3ccbcac_update_table_names_v6.py  a1b9dd64b3d3_add_new_fields.py  (+40 more)
src/processors/: basefile.py  csv.py  html.py  json.py  ner.py  pdf.py  pgsql.py  txt.py
src/sample_apps/app_1/: .env  Dockerfile  docker-compose.yml  pyproject.toml
src/sample_apps/app_1/fixtures/: data.txt
src/sample_apps/app_1/src/: main.py
(+2 files in other folders)
