[tool.poetry]
name = "llm-datacraft"
version = "0.1.0"
description = "Automated generation of high quality dataset based on your documents (pdf, csv, json, text files etc) to evaluate any LLM app endpoints"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.0"
openai = "^0.28.1"
langchain = "^0.0.305"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
