[tool.poetry]
name = "llm-datacraft"
version = "0.1.0"
description = "Automated generation of high quality dataset based on your documents (pdf, csv, json, text files etc) to evaluate any LLM app endpoints"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.0"
openai = "^0.28.1"
langchain = "^0.0.305"
bs4 = "^0.0.1"
wandb = "^0.15.12"
fastapi = "^0.104.0"
python-multipart = "^0.0.6"
asyncio = "^3.4.3"
websockets = "^12.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
chromadb = "^0.4.15"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.9.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
